fix(party): the party screen no longer squishes
closes #83

--- a/src/scss/ionic.app.scss
+++ b/src/scss/ionic.app.scss
@@ -181,21 +181,3 @@ map {
   min-height: 20px;
   line-height: 15px;
 }
-
-.party-container {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-
-  .create-block {
-    flex: 10;
-  }
-
-  .separator-block {
-    flex: 1;
-  }
-
-  .join-block {
-    flex: 10;
-  }
-}
